--- a/wp-content/themes/aktiv2014/bower.json
+++ b/wp-content/themes/aktiv2014/bower.json
@@ -3,7 +3,12 @@
   "private": true,
   "dependencies": {
     "modernizr": "~2.6.2",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "foundation": "~5.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "modernizr": ">= 2.7.2",
+    "jquery": ">= 2.1.0"
+  }
 }
