--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -26,7 +26,8 @@
     "wiredep": "^1.4.3",
     "gulp-plumber": "~0.6.3",
     "gulp-sass": "~0.7.2",
-    "gulp-util": "~2.2.19"
+    "gulp-util": "~2.2.19",
+    "gulp-concat": "~2.2.0"
   },
   "engines": {
     "node": ">=0.10.0"
