--- a/wp-content/themes/aktiv2014/bower.json
+++ b/wp-content/themes/aktiv2014/bower.json
@@ -5,7 +5,8 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.11.0",
     "foundation": "~5.3.0",
-    "moment": "~2.7.0"
+    "moment": "~2.7.0",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {},
   "resolutions": {
