--- a/wp-content/themes/aktiv2014/bower.json
+++ b/wp-content/themes/aktiv2014/bower.json
@@ -6,7 +6,8 @@
     "jquery": "~1.11.0",
     "foundation": "~5.3.0",
     "moment": "~2.7.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "chosen-bower": "~1.1.0"
   },
   "devDependencies": {},
   "resolutions": {
