--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -27,7 +27,8 @@
     "gulp-plumber": "~0.6.3",
     "gulp-sass": "~0.7.2",
     "gulp-util": "~2.2.19",
-    "gulp-concat": "~2.2.0"
+    "gulp-concat": "~2.2.0",
+    "gulp-rename": "~1.2.0"
   },
   "engines": {
     "node": ">=0.10.0"
