--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -7,7 +7,6 @@
     "connect-livereload": "^0.4.0",
     "gulp": "^3.6.0",
     "gulp-autoprefixer": "^0.0.7",
-    "gulp-bower-files": "^0.2.1",
     "gulp-cache": "^0.1.1",
     "gulp-clean": "^0.2.4",
     "gulp-csso": "^0.2.6",
@@ -28,7 +27,8 @@
     "gulp-sass": "~0.7.2",
     "gulp-util": "~2.2.19",
     "gulp-concat": "~2.2.0",
-    "gulp-rename": "~1.2.0"
+    "gulp-rename": "~1.2.0",
+    "main-bower-files": "^1.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
