--- a/wp-content/themes/aktiv2014/bower.json
+++ b/wp-content/themes/aktiv2014/bower.json
@@ -2,16 +2,12 @@
   "name": "aktiv2014",
   "private": true,
   "dependencies": {
-    "modernizr": "~2.6.2",
-    "jquery": "~1.11.0",
+    "modernizr": "~2.8.3",
+    "jquery": ">=2.1.0",
     "foundation": "~5.3.0",
     "moment": "~2.7.0",
     "underscore": "~1.6.0",
     "chosen-bower": "~1.1.0"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "modernizr": ">= 2.7.2",
-    "jquery": ">= 2.1.0"
-  }
+  "devDependencies": {}
 }
