--- a/wp-content/themes/aktiv2014/bower.json
+++ b/wp-content/themes/aktiv2014/bower.json
@@ -8,12 +8,13 @@
     "moment": "~2.8.3",
     "underscore": "~1.7.0",
     "chosen-bower": "~1.1.0",
-    "history.js": "~1.8.0"
+    "history.js": "~1.8.0",
+    "list.js": "~1.1.1"
   },
   "devDependencies": {},
   "overrides": {
-      "history.js": {
-          "main": "./scripts/bundled/html4+html5/native.history.js"
-      }
+    "history.js": {
+      "main": "./scripts/bundled/html4+html5/native.history.js"
+    }
   }
 }
