--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "wp-content/plugins/wpdirauth-posixgroup"]
 	path = wp-content/plugins/wpdirauth-posixgroup
-	url = git://git.neuf.no/wpdirauth
+	url = http://git.neuf.no/edb/wpdirauth.git
