--- a/wp-content/themes/aktiv2014/bower.json
+++ b/wp-content/themes/aktiv2014/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "modernizr": "~2.8.3",
     "jquery": ">=2.1.0",
-    "foundation": "~5.4.3",
+    "foundation": "zurb/bower-foundation#~5.5.1",
     "moment": "~2.8.3",
     "underscore": "~1.7.0",
     "chosen-bower": "~1.1.0",
@@ -16,5 +16,8 @@
     "history.js": {
       "main": "./scripts/bundled/html4+html5/native.history.js"
     }
+  },
+  "resolutions": {
+    "foundation": "~5.5.1"
   }
 }
