--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -1,33 +1,33 @@
 {
   "name": "aktiv2014",
-  "version": "0.0.0",
-  "dependencies": {},
+  "private": true,
+  "version": "0.0.1",
   "devDependencies": {
-    "connect": "^2.14.4",
-    "connect-livereload": "^0.4.0",
-    "gulp": "^3.6.0",
-    "gulp-autoprefixer": "^0.0.7",
-    "gulp-clean": "^0.2.4",
-    "gulp-concat": "~2.2.0",
-    "gulp-csso": "^0.2.6",
-    "gulp-filter": "^0.4.1",
-    "gulp-flatten": "^0.0.2",
-    "gulp-imagemin": "^0.5.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-livereload": "^1.2.0",
-    "gulp-load-plugins": "^0.5.0",
-    "gulp-plumber": "~0.6.3",
+    "autoprefixer-core": "^5.1.4",
+    "del": "^1.1.1",
+    "gulp": "^3.8.10",
+    "gulp-cache": "^0.2.4",
+    "gulp-concat": "~2.4.3",
+    "gulp-csso": "^1.0.0",
+    "gulp-filter": "^2.0.0",
+    "gulp-flatten": "^0.0.4",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.1.0",
+    "gulp-jshint": "^1.9.2",
+    "gulp-livereload": "^3.7.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-plumber": "~0.6.6",
     "gulp-rename": "~1.2.0",
-    "gulp-ruby-sass": "^0.4.3",
-    "gulp-sass": "~0.7.2",
-    "gulp-size": "^0.3.0",
-    "gulp-uglify": "^0.2.1",
-    "gulp-useref": "^0.4.2",
-    "gulp-util": "~2.2.19",
-    "jshint-stylish": "^0.2.0",
-    "main-bower-files": "^1.0.2",
-    "opn": "^0.1.1",
-    "wiredep": "^1.4.3"
+    "gulp-postcss": "~4.0.3",
+    "gulp-sass": "~1.3.2",
+    "gulp-size": "^1.2.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^1.1.1",
+    "gulp-util": "~3.0.3",
+    "jshint-stylish": "^1.0.0",
+    "main-bower-files": "^2.5.0",
+    "opn": "^1.0.1",
+    "wiredep": "^2.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
