--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -3,31 +3,31 @@
   "private": true,
   "version": "0.0.1",
   "devDependencies": {
-    "autoprefixer-core": "^5.1.4",
-    "del": "^1.1.1",
+    "autoprefixer": "^6.4.0",
+    "del": "^2.2.2",
     "gulp": "^3.8.10",
-    "gulp-cache": "^0.2.4",
-    "gulp-concat": "~2.4.3",
-    "gulp-csso": "^1.0.0",
-    "gulp-filter": "^2.0.0",
-    "gulp-flatten": "^0.0.4",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.1.0",
-    "gulp-jshint": "^1.9.2",
+    "gulp-cache": "^0.4.5",
+    "gulp-concat": "~2.6.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.7.0",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-plumber": "~0.6.6",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-plumber": "~1.1.0",
+    "gulp-postcss": "~6.1.1",
     "gulp-rename": "~1.2.0",
-    "gulp-postcss": "~4.0.3",
-    "gulp-sass": "~1.3.2",
-    "gulp-size": "^1.2.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-useref": "^1.1.1",
+    "gulp-sass": "~2.3.2",
+    "gulp-size": "^2.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.0",
     "gulp-util": "~3.0.3",
-    "jshint-stylish": "^1.0.0",
+    "jshint-stylish": "^2.2.1",
     "main-bower-files": "^2.5.0",
-    "opn": "^1.0.1",
-    "wiredep": "^2.2.2"
+    "opn": "^4.0.2",
+    "wiredep": "^4.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
