--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.1",
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "cssnano": "^3.7.4",
     "del": "^2.2.2",
     "gulp": "^3.8.10",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "~2.6.0",
-    "gulp-csso": "^2.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.3.1",
     "gulp-if": "^2.0.1",
