--- a/wp-content/themes/aktiv2014/package.json
+++ b/wp-content/themes/aktiv2014/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "browser-sync": "^2.14.0",
     "cssnano": "^3.7.4",
     "del": "^2.2.2",
-    "gulp": "^3.8.10",
+    "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "~2.6.0",
     "gulp-filter": "^4.0.0",
@@ -14,7 +15,6 @@
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
-    "gulp-livereload": "^3.7.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "~1.1.0",
     "gulp-postcss": "~6.1.1",
