--- a/aktiv2014/package.json
+++ b/aktiv2014/package.json
@@ -3,33 +3,40 @@
   "private": true,
   "version": "0.0.1",
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "^7.1.4",
     "browser-sync": "^2.14.0",
     "cssnano": "^3.7.4",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-concat": "~2.6.0",
-    "gulp-filter": "^4.0.0",
+    "gulp-filter": "^5.0.1",
     "gulp-flatten": "^0.3.1",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-jshint": "^2.0.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "~1.1.0",
-    "gulp-postcss": "~6.1.1",
+    "gulp-postcss": "~7.0.0",
     "gulp-rename": "~1.2.0",
-    "gulp-sass": "~2.3.2",
+    "gulp-sass": "~3.1.0",
     "gulp-size": "^2.1.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.0",
     "gulp-util": "~3.0.3",
     "jshint-stylish": "^2.2.1",
-    "main-bower-files": "^2.5.0",
-    "opn": "^4.0.2",
-    "wiredep": "^4.0.0"
+    "opn": "^5.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "chosen-js": "^1.8.2",
+    "foundation-sites": "5.5.3",
+    "jquery": "^3.2.1",
+    "jshint": "^2.9.5",
+    "list.js": "^1.5.0",
+    "moment": "^2.18.1",
+    "underscore": "^1.8.3"
   }
 }
